# workspace-agent-relay-mcp

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: agent-instructions.md
docs/research/: 2026-06-28-chatgpt-hermes-trigger-api.md
docs/superpowers/plans/: 2026-06-26-workspace-agent-relay-mcp.md
docs/superpowers/specs/: 2026-06-26-relay-ops-bridge-design.md  2026-06-26-relay-plan-progress-protocol-design.md  2026-06-26-workspace-agent-relay-mcp-design.md  2026-06-27-relay-steer-protocol.md  2026-06-27-relay-turn-plan-semantics.md  2026-06-28-polling-merge.md  2026-06-28-remove-callback-token.md  (+2 more)
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  router.tsx  vite-env.d.ts
frontend/tests/: composerController.test.mjs  optimisticMessageModel.test.mjs  queueModel.test.mjs  threadViewCopy.test.mjs
scripts/: build-dashboard.sh  dev-dashboard.sh  dev-tunnel.sh  hermes_fetch.py  hermes_live_demo.py  hermes_poller.py  hermes_poller_cdp.py  hermes_readback.py  hermes_translate.py
src/workspace_agent_relay_mcp/: app.py  config.py  db.py  http_compat.py  local_context.py  oauth.py  run_lifecycle.py  server.py  skills_registry.py  trigger.py  trigger_dispatch.py  web.py  workspace_directories.py
tests/: conftest.py  test_agent_tokens.py  test_config.py  test_event_bus.py  test_hermes_translate.py  test_local_context.py  test_mcp_callbacks.py  test_relay_store.py  test_server_transport.py  test_skills_registry.py  test_tool_trace.py  test_trigger_payload.py  test_web_api.py
(+89 files in other folders)
