[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workspace-agent-relay-mcp"
version = "0.1.0"
description = "Local relay MCP and dashboard for ChatGPT Workspace Agent trigger callbacks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.4,<4",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
workspace-agent-relay-mcp = "workspace_agent_relay_mcp.server:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
